objects/amazonconnect__ACSFCCP_HistoricalReportData__c.object
<CustomObject>
    <fields>
        <fullName>amazonconnect__Service_level_120_seconds__c</fullName>
        <label>Service level 120 seconds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Service_level_15_seconds__c</fullName>
        <label>Service level 15 seconds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Service_level_180_seconds__c</fullName>
        <label>Service level 180 seconds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amazonconnect__StartInterval__c</fullName>
        <label>Start Interval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Type__c</fullName>
        <description>The AC artifact the report information is related to, either a Queue or an Agent.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                    <default>true</default>
                    <label>Agent</label>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Amazon Connect Historical Report Data</label>
    <nameField>
        <label>Amazon Connect Report Data Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amazon Connect Historical Report Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>